# mpi_wrapper

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
docs/: Doxyfile  makefile
docs/html/: annotated.html  annotated_dup.js  class_m_p_iw_1_1_comm__raii-members.html  class_m_p_iw_1_1_comm__raii.html  class_m_p_iw_1_1_comm__raii.js  class_m_p_iw_1_1_group__raii-members.html  class_m_p_iw_1_1_group__raii.html  class_m_p_iw_1_1_group__raii.js  class_m_p_iw_1_1_init__raii-members.html  class_m_p_iw_1_1_init__raii.html  class_m_p_iw_1_1_init__raii.js  class_m_p_iw_1_1_init__threads__raii-members.html  class_m_p_iw_1_1_init__threads__raii.html  class_m_p_iw_1_1_init__threads__raii.js  class_m_p_iw_1_1_type__raii-members.html  class_m_p_iw_1_1_type__raii.html  class_m_p_iw_1_1_type__raii.js  classes.html  communication_8hpp.html  communication_8hpp.js  communication_8hpp__dep__incl.map  communication_8hpp__dep__incl.md5  communication_8hpp__incl.map  communication_8hpp__incl.md5  communication_8hpp_source.html  concepts_8hpp.html  concepts_8hpp.js  concepts_8hpp__dep__incl.map  concepts_8hpp__dep__incl.md5  concepts_8hpp__incl.map  concepts_8hpp__incl.md5  concepts_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  error__codes_8hpp.html  error__codes_8hpp.js  (+64 more)
src/: communication.hpp  concepts.hpp  error_codes.hpp  getters.hpp  include.hpp  main.cpp  raii.hpp  random_walk.cpp  structs.hpp  types.hpp
tests/: allgather.hpp  broadcast.hpp  gather_scatter.hpp  main.cpp  reduce.hpp  send_recv.hpp  utils.hpp
(+99 files in other folders)
